reworking the whole demo so each instance of the console pushes data to the dashboard rather than the dashboard starting new sensors

--- a/src/Simulator/Simulator.csproj
+++ b/src/Simulator/Simulator.csproj
@@ -56,11 +56,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DeviceMessageHandler.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\CoAP.NET\CoAP.NET.csproj">
+      <Project>{45DB1E45-4831-4E4A-BB1E-AE92EEA182E3}</Project>
+      <Name>CoAP.NET</Name>
+    </ProjectReference>
     <ProjectReference Include="..\m2mqtt\M2Mqtt\M2Mqtt.csproj">
       <Project>{a11aef5a-b246-4fe8-8330-06db73cc8074}</Project>
       <Name>M2Mqtt</Name>
