--- a/src/CoapConsole/CoapConsole.csproj
+++ b/src/CoapConsole/CoapConsole.csproj
@@ -4,15 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F4A66077-E47D-4B52-9110-C3310C49CDE1}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{394885AB-D203-4DAB-A61C-D98DB5F6A899}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Messages</RootNamespace>
-    <AssemblyName>Messages</AssemblyName>
+    <RootNamespace>CoapConsole</RootNamespace>
+    <AssemblyName>CoapConsole</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,6 +23,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -30,9 +32,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="NServiceBus.Core">
-      <HintPath>..\packages\NServiceBus.5.2.3\lib\net45\NServiceBus.Core.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -42,33 +41,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DeviceGateway\AddHumidityDevice.cs" />
-    <Compile Include="DeviceGateway\AddTemperatureDevice.cs" />
-    <Compile Include="AveragedHumidityUpdated.cs" />
-    <Compile Include="AveragedTemperatureUpdated.cs" />
-    <Compile Include="DeviceHumidityAboveAcceptableThreshold.cs" />
-    <Compile Include="DeviceHumidityBelowAcceptableThreshold.cs" />
-    <Compile Include="DeviceTemperatureAboveAcceptableThreshold.cs" />
-    <Compile Include="DeviceTemperatureBelowAcceptableThreshold.cs" />
-    <Compile Include="ProximityDeviceStarted.cs" />
-    <Compile Include="ProximityDeviceStopped.cs" />
-    <Compile Include="ProximitySensorDataReceived.cs" />
-    <Compile Include="Helpers\NewColor.cs" />
-    <Compile Include="HumidityDeviceAdded.cs" />
-    <Compile Include="HumidityDeviceRemoved.cs" />
-    <Compile Include="HumiditySensorDataReceived.cs" />
-    <Compile Include="DeviceGateway\RemoveHumidityDevice.cs" />
-    <Compile Include="DeviceGateway\RemoveTemperatureDevice.cs" />
-    <Compile Include="ResultCode.cs" />
-    <Compile Include="SensorData.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TemperatureDeviceRemoved.cs" />
-    <Compile Include="TemperatureSensorDataReceived.cs" />
-    <Compile Include="TemperatureDeviceAdded.cs" />
-    <Compile Include="Topics.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CoAP.NET\CoAP.NET.csproj">
+      <Project>{45DB1E45-4831-4E4A-BB1E-AE92EEA182E3}</Project>
+      <Name>CoAP.NET</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
