--- a/src/DeviceGateway/DeviceGateway.csproj
+++ b/src/DeviceGateway/DeviceGateway.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EndpointConfig.cs" />
+    <Compile Include="HeartbeatHandler.cs" />
     <Compile Include="HumiditySaga.cs" />
     <Compile Include="HumiditySagaData.cs" />
     <Compile Include="MiscExtensions.cs" />
