--- a/src/DeviceGateway/DeviceGateway.csproj
+++ b/src/DeviceGateway/DeviceGateway.csproj
@@ -52,13 +52,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EndpointConfig.cs" />
-    <Compile Include="HeartbeatHandler.cs" />
-    <Compile Include="HumiditySaga.cs" />
-    <Compile Include="HumiditySagaData.cs" />
-    <Compile Include="MiscExtensions.cs" />
+    <Compile Include="SensorHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TemperatureSaga.cs" />
-    <Compile Include="TemperatureSagaData.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
